# schrodinger-fep-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: abfe_workflow.md  multi_gpu.md  parameter_guide.md  pipeline_overview.md  qc_checklist.md  rbfe_workflow.md
examples/t4_lysozyme/: README.md  config.yaml  config_abfe.yaml  t4l_fep_final_out.fmp
examples/t4_lysozyme/abfe_results/: abfe_qc_report.txt
examples/t4_lysozyme/input/: fetch_inputs.sh  ligands.smi
examples/t4_lysozyme/qc_plots/chlorobenzene_to_benzene_solvent/: freeenergy_rtime  freeenergy_stime  freeenergy_time  gibbs.1.dE  gibbs.10.dE  gibbs.11.dE  gibbs.2.dE  gibbs.3.dE  gibbs.4.dE  gibbs.5.dE  gibbs.6.dE  gibbs.7.dE  gibbs.8.dE  gibbs.9.dE
examples/t4_lysozyme/qc_results/: qc_report.txt
examples/t4_lysozyme/results/: rbfe_final_results.md
examples/t4_lysozyme/results/abfe_toluene/: README.md  t4l_abfe_toluene_out.fmpdb
scripts/: common.sh  gpu_config.sh  run_abfe.sh  run_qc.py  run_rbfe.sh
src/fep_pipeline/: __init__.py  abfe.py  analysis.py  config.py  docking.py  ligand_prep.py  plots.py  protein_prep.py  rbfe.py  utils.py
tests/: conftest.py  test_analysis.py  test_config.py  test_ligand_prep.py  test_plots.py  test_utils.py
